# i3-config

./: .show-local-ignore  install.sh  make.conf  package.accept_keywords  package.use  packages.txt  packages_aur.txt  packages_world  todo
.config/dunst/: dunstrc
.config/i3/: autostart.conf  config  keybinds.conf
.config/kitty/: kitty.conf
.config/lf/: lfrc
.config/nsxiv/exec/: key-handler
.config/polybar/: cava.sh  config.ini  nowplaying.sh
.config/polybar/scripts/: power-profile.sh
.config/wal/templates/: colors-polybar  colors.Xresources  dunstrc  i3-colors
.local/share/applications/: mpv.desktop  nsxiv.desktop  zathura.desktop
dmenu/: config.h  dmenu.c
litemdview/: Makefile.am  README.md  bootstrap  configure.ac
litemdview/discount/: Makefile.am  config.h  mkdio.h  version.c
litemdview/libhighlight/: Makefile.am  compile-html.c  compile-pp.c  compile-term.c  config.h  keyword.c  libhighlight.c  libhighlight.h  parser.c  tokenizer.c
litemdview/libhighlight/lang/: hl_c.h  hl_java.h  hl_sh.h
litemdview/litehtml/: Makefile.am
litemdview/litehtml/containers/linux/: container_linux.cpp
litemdview/md-cheatsheet/: README.md
litemdview/src/: Makefile.am  browser_wnd.cpp  browser_wnd.h  file_loader.cpp  file_loader.h  globals.h  html_loader.cpp  html_loader.h  html_widget.cpp  html_widget.h  main.cpp  web_history.cpp  web_history.h
litemdview/themes/: gtkcssprovider.css  markdown-dark.css  markdown-darker.css  markdown-light.css  master.css
litemdview/xxd/: Makefile.am
