#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# Author: g0tsu
# Email:  g0tsu at dnmx.0rg
#
# This file is a part of litemdview project
# https://notabug.org/g0tsu/litemdview

noinst_LTLIBRARIES=libmarkdown.la
libmarkdown_la_CFLAGS=-I.
libmarkdown_la_LDFLAGS=-static
libmarkdown_la_SOURCES= amalloc.c basename.c Csio.c css.c docheader.c \
	dumptree.c emmatch.c flagprocs.c flags.c generate.c gethopt.c \
	github_flavoured.c h1title.c html5.c makepage.c markdown.c \
	mkd2html.c mkdio.c mktags.c notspecial.c pgm_options.c resource.c \
	setup.c tags.c theme.c toc.c v2compat.c version.c xml.c xmlpage.c
