#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; either version 2
# of the License, or (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# Author: g0tsu
# Email:  g0tsu at dnmx.0rg
#
# This file is a part of litemdview project
# https://notabug.org/g0tsu/litemdview

noinst_LTLIBRARIES=libhighlight.la
libhighlight_la_CFLAGS=-I.
libhighlight_la_LDFLAGS=-static
libhighlight_la_SOURCES= compile-html.c compile-pp.c compile-term.c keyword.c \
											libhighlight.c parser.c tokenizer.c
